--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -73,11 +73,11 @@
 .coatOfArmsBlock{   
     margin-left: 5%;
     max-height: 22%;
-    max-width: 18%;
+    max-width: 23%;
 }
 .coatOfArms{
-    min-height: 80%;
-    max-width: 95%;
+    max-height: 75%;
+    max-width: 90%;
 }
 .infoBlock{
     width: 45%;
