--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -4,6 +4,7 @@ body{
 .PaginationBox {
   display: flex;
   justify-content: center;
+  align-items: center;
   align-items: flex-end;
 }
 .CountryPanel {
@@ -14,78 +15,99 @@ body{
   min-height: 100%;
 }
 .ListPanel{
-  height:680px;
+  height:650px;
 }
 .Panel {
   margin-top: 1%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   max-width: 100%;
-  max-height: 15%;
+  max-height: 20%;
+}
+.bodyPanel{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  max-height: 70%;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1%;
 }
 .underPanel {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
-  height: 100%;
+  width: 15%;
+  max-height: 80%;
+  padding: 1%;
 }
 .FindPanel {
-  width: 20%;
+  margin-left: 20%;
+  width: 40%;
   padding: 0.5%;
-}
-.SPanel {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
-.ListName {
-  margin-left: 2%;
-  font-size: 2rem;
-  color: rgb(79, 209, 246);
 }
 .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"]
   .MuiAutocomplete-input {
   background: #ffffff;
 }
 .defButton{
-  height: 100%;
+  width: 95%;
+  height: 26.5px;
   border-radius: 25px;
   background: rgb(40, 54, 73);
-  padding: 0.5%;
+  padding: 1%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: aliceblue;
   cursor: pointer;
+  margin-bottom: 1.2%;
 }
 .sortPanel{
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height: 10%;
-  margin-top: 0.5%;
+  height: 100%;
 }
-.buttonS {
-  width: 10%;
-  margin-left: 0.5%;
-}
-.buttonCounries {
-  width: 15%;
-  margin-left: 0.5%;
+.activePan{
+  margin-right: 42%;
 }
 .hide {
   display: none;
 }
-.buttonRegion{
-    width: 12%;
-    padding: 0.3%;
-    margin-left: 0.5%;
-}
 .activeBut{
-background: rgb(55, 74, 100);
+background: rgb(55, 74, 100) !important;
+}
+.specBut{
+  background: rgb(57, 69, 85);
+}
+.reset{
+  background:rgb(62, 161, 188)
+}
+@media (max-width: 800px){
+  .underPanel {
+    width: 25%;
+  }
+  .defButton{
+    height: 20px;
+  }
+}
+@media (max-width: 660px){
+  .Panel{
+    flex-direction: column;
+  }
+  .FindPanel {
+    margin-left: 0%;
+    width: 90%;
+  }
+  .defButton{
+    height: 15px;
+  }
+}
+@media(max-height:700px){
+  .ListPanel{
+    height:600px;
+  }
 }
