--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -128,6 +128,9 @@ flex-wrap: wrap;
     .Rotate{
         flex-direction: column;
     }
+    .infoPanel{
+      width: 98%;
+    }
     .infoBlock{
         width: 100%;
         padding: 0%;
