--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -30,7 +30,7 @@
     padding: 0.3%;
 }
 .buttonLan{
-  width: 20%;
+  width: 45%;
   height: 2%;
   border-radius: 20px;
   background: rgb(40, 54, 73);
@@ -40,7 +40,7 @@
   color: aliceblue;
 }
 .butLanCol{
-  width: 30% !important;
+  width: 45% !important;
 }
 .blockMin{
 display: flex;
@@ -96,16 +96,22 @@ flex-wrap: wrap;
     max-width: 90%;
 }
 .infoBlock{
-    width: 45%;
+    width: 50%;
     height: 5%;
     padding: 1%;
+}
+.NewSpecBlock{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 .specBlock{
   margin-top: 1%;
   max-width: 100%;
   max-height: 10%;
 }
-
 .Rotate{
     width: 100%;
     height: 100%;
