--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -44,7 +44,7 @@ body{
 }
 .FindPanel {
   margin-left: 20%;
-  width: 40%;
+  width: 45%;
   padding: 0.5%;
 }
 .minPan{
@@ -73,6 +73,7 @@ body{
   width: 10%;
   height: 1%;
   padding: 0.6% !important;
+  margin-right: 1%;
 }
 .sortPanel{
   display: flex;
